Fix markup, try to fix list item spacing

--- a/assets/themes/css/style.css
+++ b/assets/themes/css/style.css
@@ -81,3 +81,8 @@ dl dd {
   padding: 0.5rem;
   border-radius: 0.25rem;
 }
+
+/* quickfix for P inside LI */
+li > p {
+  margin-bottom: 0;
+}
